
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../algorithms)

add_executable(2sum 2sum.cpp)
add_executable(djikstras_run djikstras_run.cpp)
add_executable(graph_scc graph_scc.cpp)
add_executable(median_maintenance median_maintenance.cpp)
add_executable(scheduling_greedy_algorithm scheduling_greedy_algorithm.cpp)
